# Rnnoise-resampler

./: .gitignore  AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  README.md  main.cpp  sources.raw
resampling/: CMakeLists.txt  buildInfo.mat  casyi.cpp  casyi.h  cmlri.cpp  cmlri.h  codeInfo.mat  compileInfo.mat  createFilter.cpp  createFilter.h  firls.cpp  firls.h  gammaln.cpp  gammaln.h  ipermute.cpp  ipermute.h  main.cpp  main.h  mldivide.cpp  mldivide.h  mod.cpp  mod.h  resampling.cpp  resampling.h  resampling_data.cpp  resampling_data.h  resampling_initialize.cpp  resampling_initialize.h  resampling_rtw.bat  resampling_rtw.mk  resampling_rtw.rsp  resampling_rtw_comp.rsp  resampling_rtwutil.cpp  resampling_rtwutil.h  resampling_terminate.cpp  resampling_terminate.h  resampling_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  (+11 more)
rnnoise/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  librnnoise.la  libtool
rnnoise/.libs/: librnnoise.lai  librnnoise.so.0.4.1
rnnoise/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
rnnoise/doc/: Doxyfile
rnnoise/doc/html/: dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  rnnoise_8h_source.html
rnnoise/doc/latex/: refman.tex
rnnoise/examples/: rnnoise_demo  rnnoise_demo.c
rnnoise/examples/.deps/: rnnoise_demo.Po
rnnoise/examples/.libs/: rnnoise_demo
rnnoise/include/: rnnoise.h
rnnoise/src/: celt_lpc.c  config.h  denoise.c  models.c  pitch.c  rnn.h  rnn_reader.c
rnnoise/src/.deps/: celt_lpc.Plo  denoise.Plo  kiss_fft.Plo  pitch.Plo  rnn.Plo  rnn_data.Plo  rnn_reader.Plo
rnnoise/src/models/: bd.c  cb.c  lq.c  mp.c  sh.c
